(fix) : menu width on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -602,7 +602,7 @@ footer {
         flex-direction: column;
         align-items: center;
         height: 80%;
-        width: 40%;
+        width: 60%;
         gap: 30px;
         h2 {
 
